--- a/mayikt/DesignPattern/行为模式/Template/pom.xml
+++ b/mayikt/DesignPattern/行为模式/Template/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Template</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Template</name>
-    <description>Demo project for Spring Boot</description>
+    <description>模板模式</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
